Colaboratory kullanılarak oluşturuldu

--- a/DAwPy_S4_(Pandas_DataFrames,_Selection_and_Indexing)_empty_(4).ipynb
+++ b/DAwPy_S4_(Pandas_DataFrames,_Selection_and_Indexing)_empty_(4).ipynb
@@ -11910,14 +11910,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "wphRPAhjVhRk"
+        "id": "wphRPAhjVhRk",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 167
+        },
+        "outputId": "afda800c-fb26-4e42-a768-e049207c30f0"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-7fad8568a839>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0msepal_width\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m: name 'sepal_width' is not defined"
+          ]
+        }
+      ],
+      "source": [
+        "sepal_width in df"
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [
         ""
-      ]
+      ],
+      "metadata": {
+        "id": "0Mp23VF5DJvJ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "exO6WbTLDE1A"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
