Colaboratory kullanılarak oluşturuldu

--- a/OrionNotexcersi2.ipynb
+++ b/OrionNotexcersi2.ipynb
@@ -5,6 +5,7 @@
     "colab": {
       "name": "OrionNotexcersi2.ipynb",
       "provenance": [],
+      "collapsed_sections": [],
       "authorship_tag": "ABX9TyNr38pbxIvWEXxRpx0eOCE4",
       "include_colab_link": true
     },
